--- a/frontend/src/styles/Button.css
+++ b/frontend/src/styles/Button.css
@@ -1,4 +1,3 @@
-/* src/styles/Button.css */
 .btn {
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
@@ -9,21 +8,21 @@
 }
 
 .btn.primary {
-    background-color: var(--primary-color);
+    background-color: #2a2c30;
     color: white;
 }
 
 .btn.secondary {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
 }
 
 .btn.primary:hover {
-    background-color: darken(var(--primary-color), 50%);
+    background-color: var(--primary-color-dark, #141517); /* Fallback color if variable not set */
 }
 
 .btn.secondary:hover {
-    background-color: darken(var(--secondary-color), 50%);
+    background-color: var(--secondary-color-dark, #0056b3); /* Fallback color if variable not set */
 }
 
 .btn:disabled {
