--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,3 +1,13 @@
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
 .footer {
-    margin-top: auto; 
-}   
+    margin-top: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
