Major bug fixed

--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -6,7 +6,9 @@ body {
 }
 
 .footer {
-    margin-top: 320px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
