--- a/frontend/src/styles/SearchBar.css
+++ b/frontend/src/styles/SearchBar.css
@@ -26,13 +26,14 @@
     background-color: var(--background-color);
     border: 1px solid var(--secondary-color);
     border-radius: 5px;
-    max-height: 300px;
+    max-height: 650px;
     overflow-y: auto;
     padding: 1rem;
 }
 
 .search-result-item {
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: 1rem;
     padding: 0.5rem 0;
